🔄 refactor: updated namespace and dependencies for Vue integration
Adjusted namespaces from `Inductor\Inductor` to `ChrisReedIO\Inductor`. Added Vue-related packages to `package.json` and created `VueComponent` class with corresponding view and test adjustments. This paves the way for integrating Vue components into the project.

--- a/composer.json
+++ b/composer.json
@@ -39,13 +39,13 @@
     },
     "autoload": {
         "psr-4": {
-            "Inductor\\Inductor\\": "src/",
-            "Inductor\\Inductor\\Database\\Factories\\": "database/factories/"
+            "ChrisReedIO\\Inductor\\": "src/",
+            "ChrisReedIO\\Inductor\\Database\\Factories\\": "database/factories/"
         }
     },
     "autoload-dev": {
         "psr-4": {
-            "Inductor\\Inductor\\Tests\\": "tests/"
+            "ChrisReedIO\\Inductor\\Tests\\": "tests/"
         }
     },
     "scripts": {
@@ -65,10 +65,10 @@
     "extra": {
         "laravel": {
             "providers": [
-                "Inductor\\Inductor\\InductorServiceProvider"
+                "ChrisReedIO\\Inductor\\InductorServiceProvider"
             ],
             "aliases": {
-                "Inductor": "Inductor\\Inductor\\Facades\\Inductor"
+                "Inductor": "ChrisReedIO\\Inductor\\Facades\\Inductor"
             }
         }
     },
