--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "prettier": "^2.7.1",
         "prettier-plugin-tailwindcss": "^0.1.13",
         "tailwindcss": "^3.3.3",
-        "vue": "^3.5.3"
+        "vue": "^3.5.3",
+        "vue-tsc": "^2.1.6"
     }
 }
